--- a/index.html
+++ b/index.html
@@ -1,3 +1,33 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <title>AI Girlfriend – My Secret Play | Privacy Policy</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 0 16px;
+      line-height: 1.6;
+      color: #222;
+    }
+    h1, h2, h3 {
+      font-weight: 600;
+    }
+    pre {
+      white-space: pre-wrap;
+      font-family: inherit;
+    }
+  </style>
+</head>
+<body>
+  <h1>Privacy Policy</h1>
+  <pre>
+AI Girlfriend – Your Secret Play
+Last updated: November 11, 2025
+
 Privacy Policy
 
 AI Girlfriend – Your Secret Play Last updated: November 11, 2025
@@ -109,3 +139,6 @@ We may update this Privacy Policy periodically. When changes are material, we wi
 If you have any questions, concerns, or requests about this Privacy Policy, please contact us:
 
 SenseForge Ltd connect@aibuiltbetter.com
+     </pre>
+</body>
+</html>P
